--- a/nginx/robot.conf
+++ b/nginx/robot.conf
@@ -2,8 +2,8 @@ server {
     listen 5800;
     server_name _;
 
-    #access_log  /tmp/access.log;
-    error_log  /tmp/errors.log;
+    #access_log /home/pi/git/FRC-2017/logs/nginx-access.log;
+    error_log /home/pi/git/FRC-2017/logs/nginx-errors.log;
 
     location / {
         proxy_pass http://127.0.0.1:8080;
