--- a/nginx/robot.conf
+++ b/nginx/robot.conf
@@ -2,7 +2,7 @@ server {
     listen 5800;
     server_name _;
 
-    #access_log /home/pi/git/FRC-2017/logs/nginx-access.log;
+    # access_log /home/pi/git/FRC-2017/logs/nginx-access.log;
     error_log /home/pi/git/FRC-2017/logs/nginx-errors.log;
 
     location / {
@@ -15,5 +15,9 @@ server {
         proxy_set_header   X-Real-IP            $remote_addr;
         proxy_set_header   X-Forwarded-For      $proxy_add_x_forwarded_for;
         proxy_set_header   X-Forwarded-Proto    $scheme;
-    }
+
+        expires -1;
+        add_header Cache-Control "cache, no-store, must-revalidate";
+        add_header Pragma "no-cache";
+   }
  }
